syntax = "proto3";
package volnix.consensus.v1;

import "google/api/annotations.proto";
import "volnix/consensus/v1/types.proto";

option go_package = "github.com/volnix-protocol/volnix-protocol/proto/gen/go/volnix/consensus/v1;consensusv1";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of the consensus module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/volnix/consensus/v1/params";
  }
  
  // Validators queries all validators.
  rpc Validators(QueryValidatorsRequest) returns (QueryValidatorsResponse) {
    option (google.api.http).get = "/volnix/consensus/v1/validators";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1;
}

// QueryValidatorsRequest is request type for the Query/Validators RPC method.
message QueryValidatorsRequest {}

// QueryValidatorsResponse is response type for the Query/Validators RPC method.
message QueryValidatorsResponse {
  // validators holds all the validators.
  repeated Validator validators = 1;
}
